# Jacy-Base

./: .gitignore  CMakeLists.txt
include/: Jacy.h
include/interpreter/: Interpreter.h  Scope.h
include/lib/: functions.h
include/object/: BaseFunc.h  Bool.h  Callable.h  Class.h  Float.h  Func.h  Int.h  NativeFunc.h  Null.h  Object.h  String.h  Value.h  objects.h
include/parser/: Lexer.h  Parser.h
include/tree/Expr/: Identifier.h
src/: Jacy.cpp  main.cpp
src/interpreter/: Interpreter.cpp
src/lib/: functions.cpp
src/object/: BaseFunc.cpp  Bool.cpp  Class.cpp  Float.cpp  Func.cpp  Int.cpp  NativeFunc.cpp  Null.cpp  Object.cpp  String.cpp
src/parser/: Parser.cpp
